Removal of a ton of things.

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -32,7 +32,10 @@ jar.compress=false
 javac.classpath=\
     ${libs.BukkitLib.classpath}:\
     ${libs.CraftBukkit.classpath}:\
-    ${libs.Spigot 1.7.10.classpath}
+    ${libs.Spigot 1.7.10.classpath}:\
+    ${libs.TFM.classpath}:\
+    ${libs.SpigotAndCraftBukkit.classpath}:\
+    ${libs.SpigotGoodies.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
