--- a/src/config.yml
+++ b/src/config.yml
@@ -1,20 +1,13 @@
 server-name: VideoFreedom
-## Okay, so 'server-name' might be unused. But I might use this if I have to.
 
-plugin-base: BukkitLib
-## Used for the command "phantomtools" in the "Plugin based from: " part.
+enabled_commands:
+    - dialup
+    - notchtroll
+    - rocket
+    - phantomtools
 
-plugin-name: PhantomTools
-## When modifying this plugin, you might consider changing the name of this plugin 
-## so you don't cause any confusion. Hehe, :3
-
-plugin-version: Alpha 0.2
-## I specifically know that this was made from scratch. If you are contributing 
-## to this plugin, you better change this or you will cause confusion.
-## Plus, this is only usable for developers of the plugin. Modifying this for your
-## own plugin will violate the licence altogether. 
-
-developers: 'PhantomOediv215, cowgomooo12'
-## Go ahead and modify this, I don't care. Just make sure to keep my name in it.
-## Multiple developers example: 'PhantomOediv215, developer532'
-
+plugin-information:
+    name: PhantomTools
+    version: v0.2.1
+    developers: 'PhandomOediv215, cowgomooo12'
+    based: BukkitLib
