--- a/src/config.yml
+++ b/src/config.yml
@@ -1,3 +1,14 @@
+#####################################################################
+#  _____  _                 _               _______          _      #
+# |  __ \| |               | |             |__   __|        | |     #
+# | |__) | |__   __ _ _ __ | |_ ___  _ __ ___ | | ___   ___ | |___  #
+# |  ___/| '_ \ / _` | '_ \| __/ _ \| '_ ` _ \| |/ _ \ / _ \| / __| #
+# | |    | | | | (_| | | | | || (_) | | | | | | | (_) | (_) | \__ \ #
+# |_|    |_| |_|\__,_|_| |_|\__\___/|_| |_| |_|_|\___/ \___/|_|___/ #
+#-------------------------------------------------------------------#
+#                   Official Plugin Configuration                   #
+#####################################################################
+
 server-name: VideoFreedom
 
 enabled_commands:
